--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
-    <title>indulge</title>
+    <title>Indulge</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
